# carlxaeron.github.io

./: .env.example  .firebaserc  .gitignore  .gitmodules  .namecheap-browser.env.example  AGENTS.md  CHANGELOG.md  CNAME  README.md  SUBMODULES.md  asset-manifest.json  build-to-docs.js  clm-portfolio.7z  config.js  firebase.json  firestore.indexes.json  firestore.rules  gulpfile.js  index.html  package-lock.json  package.json  tailwind.config.js  webpack.config.js
.cursor/: MCP.md  mcp.json
Hosting-SSH-MCP-Server/: .env.example  README.md  package-lock.json  package.json  start-mcp.sh
Namecheap-MCP-Server/: .env.example  README.md  package-lock.json  package.json  start-mcp.sh
OnlineJobs-MCP-Server/: .env.example  README.md  pyproject.toml
OnlineJobs-MCP-Server/dashboard-ui/: README.md  index.html  package-lock.json  package.json
OnlineJobs-MCP-Server/dashboard-ui/src/: App.jsx  api.js  styles.css
OnlineJobs-MCP-Server/dashboard-ui/src/components/: ApplicationsTab.jsx  DetailDrawer.jsx  SearchTab.jsx
OnlineJobs-MCP-Server/onlinejobs_mcp_server/: __init__.py  applications.py  cv_upload.py  dashboard_api.py  main.py  search.py
OnlineJobs-MCP-Server/scripts/: google_drive_auth.py
api-carlxaeron/: .env.example  README.md  composer.json
api-carlxaeron-legacy-php/: .env.example  README.md
client-sites/: README.md
docs/: asset-manifest.json  index.html  job-applications-workflow.md  manifest.json  project-history.md  robots.txt  sitemap.xml  sw-admin-push.js
extensions/: firestore-send-email.env.example
functions/: .env.example  analyticsExclusion.js  (+5 more)
(+1145 files in other folders)
